--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -22,7 +22,7 @@
           android:versionName="0.5.14" 
           android:versionCode="33"
           >
-  <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10"/>
+  <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="19"/>
   <supports-screens android:xlargeScreens="true"
                     android:largeScreens="true"
                     android:normalScreens="true"
@@ -31,7 +31,10 @@
   <uses-feature android:name="android.hardware.camera.flash" android:required="false" />
   <uses-feature android:name="android.hardware.camera"/>
   <uses-feature android:name="android.hardware.screen.landscape"/>
-  
+  <uses-permission android:name="android.permission.CAMERA"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+     
   <application android:icon="@drawable/ic_launcher"
                android:label="@string/app_name">
     <activity android:name=".CaptureActivity"
@@ -41,9 +44,13 @@
               android:windowSoftInputMode="stateAlwaysHidden"              
               >
       <intent-filter>
+                <action android:name="com.google.android.glass.action.VOICE_TRIGGER" />
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
+            <meta-data
+                android:name="com.google.android.glass.VoiceTrigger"
+                android:resource="@xml/voice_trigger_start" />
       </activity>
     <activity android:name=".HelpActivity"
               android:screenOrientation="user">
@@ -54,8 +61,6 @@
     </activity>
     
     <activity android:name=".PreferencesActivity" />
-  </application>
-  <uses-permission android:name="android.permission.CAMERA"/>
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-</manifest>
+ 
+    </application>
+  </manifest>
