--- a/android/project.properties
+++ b/android/project.properties
@@ -8,6 +8,6 @@
 # project structure.
 
 # Project target.
-target=android-19
+target=Google Inc.:Glass Development Kit Sneak Peek:15
 proguard.config=proguard.cfg
-android.library.reference.1=../../tess/tess-two
+android.library.reference.1=../../../../../../../../home/fedex1/Downloads/tess-two/tess-two
